--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cinematic Prompt Architect</title>
+
+    <!-- SEO & Social Sharing -->
+    <meta name="description" content="An advanced AI-powered tool to transform your simple ideas into production-quality, cinematic video prompts. Features prompt history, customizable templates, and multiple generation modes." />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Cinematic Prompt Architect" />
+    <meta property="og:description" content="An advanced AI-powered tool to transform your simple ideas into production-quality, cinematic video prompts. Features prompt history, customizable templates, and multiple generation modes like JSON, MARS-LSP and TEXT." />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1269393132685103150/1435407222409527377/image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cinematic Prompt Architect" />
+    <meta name="twitter:description" content="An advanced AI-powered tool to transform your simple ideas into production-quality, cinematic video prompts. Features prompt history, customizable templates, and multiple generation modes like JSON, MARS-LSP and TEXT." />
+    <meta name="twitter:image" content="https://media.discordapp.net/attachments/1269393132685103150/1435407222409527377/image.png" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +36,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
