metadata desc change

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cinematic Prompt Architect</title>
+    <title>Prompt Architect</title>
 
     <!-- SEO & Social Sharing -->
-    <meta name="description" content="An advanced AI-powered tool to transform your simple ideas into production-quality, cinematic video prompts. Features prompt history, customizable templates, and multiple generation modes." />
+    <meta name="description" content="Your AI co-director for video creation. Effortlessly craft detailed, cinematic prompts from simple ideas." />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Cinematic Prompt Architect" />
-    <meta property="og:description" content="An advanced AI-powered tool to transform your simple ideas into production-quality, cinematic video prompts. Features prompt history, customizable templates, and multiple generation modes like JSON, MARS-LSP and TEXT." />
+    <meta property="og:title" content="Prompt Architect" />
+    <meta property="og:description" content="Your AI co-director for video creation. Effortlessly craft detailed, cinematic prompts from simple ideas." />
     <meta property="og:image" content="https://media.discordapp.net/attachments/1269393132685103150/1435407222409527377/image.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Cinematic Prompt Architect" />
-    <meta name="twitter:description" content="An advanced AI-powered tool to transform your simple ideas into production-quality, cinematic video prompts. Features prompt history, customizable templates, and multiple generation modes like JSON, MARS-LSP and TEXT." />
+    <meta name="twitter:title" content="Prompt Architect" />
+    <meta name="twitter:description" content="Your AI co-director for video creation. Effortlessly craft detailed, cinematic prompts from simple ideas." />
     <meta name="twitter:image" content="https://media.discordapp.net/attachments/1269393132685103150/1435407222409527377/image.png" />
 
     <script src="https://cdn.tailwindcss.com"></script>
